fdo#85185 Copy OUString argument to avoid a use after free

The original OUString is destroyed along with its containing
object part way through the call to PaletteManager::PopupColorPicker(),
so a copy must be taken

Change-Id: I8417ff23a17003e80a4f65e0cf1ad2a8dda5386c
Reviewed-on: https://gerrit.libreoffice.org/12031
Reviewed-by: Noel Grandin <noelgrandin@gmail.com>
Tested-by: Noel Grandin <noelgrandin@gmail.com>